--- a/Aula 4/assets/css/style.css
+++ b/Aula 4/assets/css/style.css
@@ -1,24 +1,23 @@
 .container {
     display: grid;
-    grid-template-columns: 250px;
+    grid-template-columns: 1fr 1fr;
     background-color: black;  
   }
   
   .item {
-    display: grid; 
+    display: flex;
     border: 2px solid black;
     background-color: rgb(72, 83, 143);
     height: 50px;
-    position: relative;
     counter-increment: el-counter;
+    justify-content: center;
+    align-items: center;
     
   }
   .item::after{
     content: counter(el-counter);
-    position: absolute;
     font-size: 18px;
-    top: 50%;
-    left: 50%;
-    transform: rotate(180deg)
+    
+    
   
   }
